# BanZ-C401-Day14

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agent/: main_agent.py
analysis/: failure_analysis.md
analysis/reflections/: reflection_DinhThaiTuan_2A202600360.md  reflection_LeThanhThuong_2A202600106.md  reflection_LeVanTung_2A202600111.md  reflection_NguyenDucSi_2A202600152.md
data/: synthetic_gen.py
data/data/: golden_set.jsonl
engine/: llm_judge.py  retrieval_eval.py  runner.py
reports/: benchmark_results.json  summary.json
src/: ingestion.py
vector_db/: chroma.sqlite3
