[project]
name = "banz-c401-day14"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.8",
    "jinja2>=3.1.0",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.3.0",
    "langchain-deepseek>=1.0.1",
    "langchain-huggingface>=1.2.2",
    "openai>=1.10.0",
    "pandas>=2.1.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
    "ragas>=0.1.7",
    "sentence-transformers>=5.4.1",
    "tqdm>=4.66.0",
]
